--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,15 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.4'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
-apply plugin: 'android'
 
-dependencies {
-}
-
-android {
-    compileSdkVersion 17
-    buildToolsVersion "17"
-
-    defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 17
-    }
-    sourceSets {
-        main {
-            manifest.srcFile 'AndroidManifest.xml'
-            java.srcDirs = ['src']
-            resources.srcDirs = ['src']
-            aidl.srcDirs = ['src']
-            renderscript.srcDirs = ['src']
-            res.srcDirs = ['res']
-            assets.srcDirs = ['assets']
-        }
-
-        instrumentTest.setRoot('tests')
+allprojects {
+    repositories {
+        jcenter()
     }
 }
