--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.RemoteSurveillance.ARS2.EntryPoint"
+            android:name="com.RemoteSurveillance.ARS2.ui.Activity_SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             
